# vectorium

./: .env  .gitignore  Cargo.toml  docker-compose.yml  requirements.md
src/: main.rs
vectorium-api/: Cargo.toml
vectorium-api/src/: main.rs
vectorium-common/: Cargo.toml
vectorium-common/src/: lib.rs  main.rs
vectorium-counter/: Cargo.toml
vectorium-counter/src/: main.rs
vectorium-db/: Cargo.toml
vectorium-db/src/: lib.rs  main.rs  model.rs  repository.rs
