[package]
name = "vectorium-db"
version = "0.1.0"
edition = "2024"

[dependencies]
qdrant-client = "1.15.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
finalfusion = "0.18.0"
wordfreq-model = { version = "0.2.3", features = ["large-ja"] }
