[package]
name = "vectorium-db"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
glob = "0.3.1"
qdrant-client = "1.15.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
rust-bert = "0.23.0"
vectorium-common = { path = "../vectorium-common" }
